# Nightmare-fishing-bot

./: .gitignore  Cargo.toml  README.md  example.txt  index.js  package-lock.json  package.json
src/: data.rs  events.rs  game.rs  main.rs
src/commands/: admin.rs  fishing.rs  fishsetup.js  fishsummary.js  mod.rs  setbestanglerstreak.js  setreminderthreshold.js  setrole.js  setsummarychannel.js  togglereminder.js
src/data/: DataManager.js
src/events/: interactionCreate.js  ready.js
src/game/: FishingManager.js
src/utils/: timeUtils.js
