[package]
name = "stardust-pond-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
